--- a/index.html
+++ b/index.html
@@ -135,35 +135,43 @@
 </div>
 
 <div id="q1" class="quiz-container active">
-  <h2>Qual desses sabores melhor representa seu conhecimento em sorvetes?</h2>
-  <a class="option" onclick="nextQuestion('q2')">Baunilha – Começando agora</a>
-  <a class="option" onclick="nextQuestion('q2')">Chocolate – Já experimentei bastante</a>
-  <a class="option" onclick="nextQuestion('q2')">Morango – Aprendizado doce e crescente</a>
-  <a class="option" onclick="nextQuestion('q2')">Menta – Bem refrescado no assunto</a>
+  <h2>Qual dessas memórias te traz mais saudade da infância?</h2>
+  <a class="option" onclick="nextQuestion('q2')">Comer sobremesa com a família aos domingos</a>
+  <a class="option" onclick="nextQuestion('q2')">Aquele cheirinho gostoso vindo da cozinha</a>
+  <a class="option" onclick="nextQuestion('q2')">As risadas ao redor da mesa</a>
+  <a class="option" onclick="nextQuestion('q2')">A culinária da vó ou da mãe</a>
 </div>
 
 <div id="q2" class="quiz-container">
-  <h2>Você já tentou fazer sorvete em casa?</h2>
-  <a class="option" onclick="nextQuestion('q3')">Sim, e ficou ótimo!</a>
-  <a class="option" onclick="nextQuestion('q3')">Sim, mas não deu muito certo</a>
-  <a class="option" onclick="nextQuestion('q3')">Ainda não, mas quero</a>
-  <a class="option" onclick="nextQuestion('q3')">Nunca pensei nisso</a>
+  <h2>Se você pudesse criar uma nova tradição familiar, o que ela incluiria?</h2>
+  <a class="option" onclick="nextQuestion('q3')">Preparar receitas juntos nos finais de semana</a>
+  <a class="option" onclick="nextQuestion('q3')">Ter uma sobremesa especial feita em casa</a>
+  <a class="option" onclick="nextQuestion('q3')">Ensinar os filhos a cozinhar</a>
+  <a class="option" onclick="nextQuestion('q3')">Reunir todos para momentos especiais à mesa</a>
 </div>
 
 <div id="q3" class="quiz-container">
-  <h2>Você tem algum equipamento de cozinha específico?</h2>
-  <a class="option" onclick="nextQuestion('q4')">Tenho sorveteira</a>
-  <a class="option" onclick="nextQuestion('q4')">Só liquidificador</a>
-  <a class="option" onclick="nextQuestion('q4')">Geladeira + força de vontade</a>
-  <a class="option" onclick="nextQuestion('q4')">Pretendo comprar equipamentos</a>
+  <h2>Como você se sentiria ao ver sua família pedindo aquele seu sorvete especial toda semana?</h2>
+  <a class="option" onclick="nextQuestion('q4')">Orgulhosa por fazer algo delicioso</a>
+  <a class="option" onclick="nextQuestion('q4')">Feliz por unir a família ao redor da mesa</a>
+  <a class="option" onclick="nextQuestion('q4')">Realizado(a) por criar momentos únicos</a>
+  <a class="option" onclick="nextQuestion('q4')">Com vontade de experimentar novos sabores</a>
 </div>
 
 <div id="q4" class="quiz-container">
-  <h2>Por que você quer aprender a fazer sorvete?</h2>
-  <a class="option" onclick="nextQuestion('final')">Para empreender</a>
-  <a class="option" onclick="nextQuestion('final')">Para consumo próprio</a>
-  <a class="option" onclick="nextQuestion('final')">Por hobby</a>
-  <a class="option" onclick="nextQuestion('final')">Para presentear ou vender</a>
+  <h2>Você gostaria de ter acesso a receitas de sorvetes artesanais que encantam adultos e crianças e podem virar uma tradição na sua casa?</h2>
+  <a class="option" onclick="nextQuestion('q5')">Sim, com certeza!</a>
+  <a class="option" onclick="nextQuestion('q5')">Claro, adoro fazer receitas especiais</a>
+  <a class="option" onclick="nextQuestion('q5')">Talvez, se forem fáceis e gostosas</a>
+  <a class="option" onclick="nextQuestion('q5')">Não tenho certeza (mas fiquei curioso)</a>
+</div>
+
+<div id="q5" class="quiz-container">
+  <h2>Eu vou te mostrar receitas que podem ser feitas em casa, de forma fácil, rápida e sem precisar de muito. Mas por dúvida, o que você teria aí na sua casa?</h2>
+  <a class="option" onclick="nextQuestion('final')">Tenho sorveteira</a>
+  <a class="option" onclick="nextQuestion('final')">Só liquidificador</a>
+  <a class="option" onclick="nextQuestion('final')">Geladeira + força de vontade</a>
+  <a class="option" onclick="nextQuestion('final')">Pretendo comprar equipamentos</a>
 </div>
 
 <div id="final" class="quiz-container final">
@@ -171,8 +179,7 @@
   <img src="https://via.placeholder.com/600x200/ffe1e6/3e3e3e?text=Ebook+Sorvete+sem+Segredo" alt="Ebook"/>
   <img src="https://via.placeholder.com/600x200/c1f0dc/3e3e3e?text=Receitas+exclusivas+e+simples" alt="Receitas"/>
   <p style="text-align: center; margin-top: 20px;">
-    Descubra como criar sorvetes incríveis com ingredientes simples e técnicas acessíveis.
-  </p>
+Descubra como criar momentos inesquecíveis com o eBook Sorvete sem Segredo — suas receitas podem virar parte das melhores memórias da sua família.  </p>
   <div style="text-align: center;">
     <a class="checkout-button" href="https://seulinkdecheckout.com" target="_blank">
       Adquirir o Ebook Agora
