--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Sorvete sem Segredo - Quiz</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet" />
   <style>
     :root {
       --rosa: #fbb1bd;
@@ -19,7 +20,7 @@
     }
 
     body {
-      font-family: 'Poppins', sans-serif;
+      font-family: 'Montserrat', sans-serif;
       background: var(--creme);
       color: var(--text-dark);
       margin: 0;
@@ -178,17 +179,45 @@
 
 <div id="final" class="quiz-container final">
   <h2>Você está pronto para desvendar o segredo dos sorvetes!</h2>
-  <img src="https://via.placeholder.com/600x200/ffe1e6/3e3e3e?text=Ebook+Sorvete+sem+Segredo" alt="Ebook" loading="lazy"/>
-  <img src="https://via.placeholder.com/600x200/c1f0dc/3e3e3e?text=Receitas+exclusivas+e+simples" alt="Receitas" loading="lazy"/>
-  <p style="text-align: center; margin-top: 20px;">
-    Descubra como criar momentos inesquecíveis com o eBook Sorvete sem Segredo — suas receitas podem virar parte das melhores memórias da sua família.
+
+  <div style="display: flex; flex-wrap: wrap; align-items: center; gap: 20px; margin-top: 20px;">
+    <div style="flex: 1 1 300px; min-width: 250px;">
+      <img src="https://via.placeholder.com/400x300/fbe1e6/3e3e3e?text=Fam%C3%ADlia+e+Sorvete" alt="Família feliz com sorvete" style="width: 100%; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);" />
+    </div>
+    <div style="flex: 2 1 300px; min-width: 250px;">
+      <p><strong>“Eu também queria mais do que só uma sobremesa...”</strong></p>
+
+      <p>Quando comecei a fazer sorvetes em casa, meu maior desejo era ver minha família reunida, sorrindo, criando memórias simples — mas marcantes. Foi nesse momento que percebi: receitas podem ir muito além do sabor. Elas criam conexão, acolhimento e afeto.</p>
+
+      <p>Assim nasceu o <strong>Sorvete sem Segredo</strong>: um eBook feito para transformar a sua cozinha em um espaço de encontros inesquecíveis. E para isso, ele foi pensado com muito carinho, oferecendo:</p>
+
+      <div style="margin: 20px 0; padding: 20px; background: var(--menta); border-radius: 12px; line-height: 1.8;">
+        <p>🍦 Receitas simples, práticas e testadas para qualquer nível.</p>
+        <p>👨‍👩‍👧‍👦 Inspiração para criar momentos especiais em família.</p>
+        <p>⏱️ Preparo rápido com poucos ingredientes.</p>
+        <p>❄️ Funciona com ou sem sorveteira.</p>
+        <p>🎁 Um bônus surpresa para quem garantir hoje.</p>
+      </div>
+
+      <p>Se você chegou até aqui, é porque também valoriza esses momentos. E acredite: não é preciso ser chef para encantar sua família com sabores incríveis — só é preciso um pouco de vontade… e as receitas certas.</p>
+
+      <p style="text-align: center; font-size: 1.1rem; margin-top: 25px;">
+        💛 <strong>Vamos dar o primeiro passo juntos?</strong>
+      </p>
+  <p style="font-size: 0.8rem; color: red; font-weight: bold; text-align: center;">
+    🎉 Como você chegou até o final, merece um desconto exclusivo! Aproveite agora para garantir o <strong>eBook por apenas R$19,90</strong> 😍
   </p>
-  <div style="text-align: center;">
+    </div>
+  </div>
+
+
+  <div style="text-align: center; margin-top: 30px;">
     <a class="checkout-button" href="https://seulinkdecheckout.com" target="_blank">
-      Adquirir o Ebook Agora
+      👉 Garantir meu eBook com desconto agora!
     </a>
   </div>
 </div>
+
 
 <!-- Biblioteca de Confete -->
 <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
