--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
   <div style="display: flex; flex-wrap: wrap; align-items: center; gap: 20px; margin-top: 20px;">
     <div style="flex: 1 1 300px; min-width: 250px;">
-      <img src="https://via.placeholder.com/400x300/fbe1e6/3e3e3e?text=Fam%C3%ADlia+e+Sorvete" alt="Família feliz com sorvete" style="width: 100%; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);" />
+      <img src="images/pessoa.png" alt="Família feliz com sorvete" style="width: 100%; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);" />
     </div>
     <div style="flex: 2 1 300px; min-width: 250px;">
       <p><strong>“Eu também queria mais do que só uma sobremesa...”</strong></p>
@@ -196,7 +196,6 @@
         <p>👨‍👩‍👧‍👦 Inspiração para criar momentos especiais em família.</p>
         <p>⏱️ Preparo rápido com poucos ingredientes.</p>
         <p>❄️ Funciona com ou sem sorveteira.</p>
-        <p>🎁 Um bônus surpresa para quem garantir hoje.</p>
       </div>
 
       <p>Se você chegou até aqui, é porque também valoriza esses momentos. E acredite: não é preciso ser chef para encantar sua família com sabores incríveis — só é preciso um pouco de vontade… e as receitas certas.</p>
