Teste de commit com conta correta

--- a/index.html
+++ b/index.html
@@ -192,31 +192,32 @@
       <p>Assim nasceu o <strong>Sorvete sem Segredo</strong>: um eBook feito para transformar a sua cozinha em um espaço de encontros inesquecíveis. E para isso, ele foi pensado com muito carinho, oferecendo:</p>
 
       <div style="margin: 20px 0; padding: 20px; background: var(--menta); border-radius: 12px; line-height: 1.8;">
-        <p>🍦 Receitas simples, práticas e testadas para qualquer nível.</p>
-        <p>👨‍👩‍👧‍👦 Inspiração para criar momentos especiais em família.</p>
-        <p>⏱️ Preparo rápido com poucos ingredientes.</p>
-        <p>❄️ Funciona com ou sem sorveteira.</p>
+        <p>🍦 <strong>Receitas simples, práticas e testadas para qualquer nível.</strong></p>
+        <p>👨‍👩‍👧‍👦 <strong>Inspiração para criar momentos especiais em família.</strong></p>
+        <p>⏱️ <strong>Preparo rápido com poucos ingredientes.</strong></p>
+        <p>❄️ <strong>Funciona com ou sem sorveteira.</strong></p>
       </div>
 
-      <p>Se você chegou até aqui, é porque também valoriza esses momentos. E acredite: não é preciso ser chef para encantar sua família com sabores incríveis — só é preciso um pouco de vontade… e as receitas certas.</p>
+      <p>Se você chegou até aqui, é porque também valoriza esses momentos.</p>
+
+      <p>E acredite: não é preciso ser chef para encantar sua família com sabores incríveis — só é preciso um pouco de vontade… e as receitas certas.</p>
 
       <p style="text-align: center; font-size: 1.1rem; margin-top: 25px;">
         💛 <strong>Vamos dar o primeiro passo juntos?</strong>
       </p>
   <p style="font-size: 0.8rem; color: red; font-weight: bold; text-align: center;">
-    🎉 Como você chegou até o final, merece um desconto exclusivo! Aproveite agora para garantir o <strong>eBook por apenas R$19,90</strong> 😍
+    🎉 Por que você tem esse desejo, assim como o meu, também merece um desconto exclusivo! Aproveite 😍
   </p>
     </div>
   </div>
 
 
-  <div style="text-align: center; margin-top: 30px;">
+  <div style="text-align: center; margin-top: 10px;">
     <a class="checkout-button" href="https://seulinkdecheckout.com" target="_blank">
       👉 Garantir meu eBook com desconto agora!
     </a>
   </div>
 </div>
-
 
 <!-- Biblioteca de Confete -->
 <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
