Pagina obrigado e att index

--- a/index.html
+++ b/index.html
@@ -180,45 +180,44 @@
 <div id="final" class="quiz-container final">
   <h2>Você está pronto para desvendar o segredo dos sorvetes!</h2>
 
-  <div style="display: flex; flex-wrap: wrap; align-items: center; gap: 20px; margin-top: 20px;">
+  <div style="display: flex; flex-wrap: wrap; align-items: flex-start; gap: 30px; margin-top: 30px;">
     <div style="flex: 1 1 200px; min-width: 250px;">
-      <img src="images/pessoa.png" alt="Família feliz com sorvete" style="width: 100%; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);" />
+      <img src="images/pessoa.png" alt="Família feliz com sorvete" style="width: 100%; border-radius: 16px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);" />
     </div>
-    <div style="flex: 2 1 200px; min-width: 250px;">
-      <p><strong>“Eu também queria mais do que só uma sobremesa...”</strong></p>
 
-      <p>Quando comecei a fazer sorvetes em casa, meu maior desejo era ver minha família reunida, sorrindo, criando memórias simples — mas marcantes. Foi nesse momento que percebi: receitas podem ir muito além do sabor. Elas criam conexão, acolhimento e afeto.</p>
+    <div style="flex: 2 1 200; min-width: 280px;">
+      <p style="font-size: 1rem; line-height: 1.6;">
+        <strong>“Eu também queria mais do que só uma sobremesa...”</strong>
+      </p>
+      <p style="line-height: 1.6;">Quando comecei a fazer sorvetes em casa, meu maior desejo era ver minha família reunida, sorrindo, criando memórias simples — mas marcantes. Foi nesse momento que percebi: receitas podem ir muito além do sabor. Elas criam conexão, acolhimento e afeto.</p>
 
-      <p>Assim nasceu o <strong>Sorvete sem Segredo</strong>: um eBook feito para transformar a sua cozinha em um espaço de encontros inesquecíveis. E para isso, ele foi pensado com muito carinho, oferecendo:</p>
+      <p style="line-height: 1.6;">Assim nasceu o <strong>Sorvete sem Segredo</strong>: um eBook feito para transformar a sua cozinha em um espaço de encontros inesquecíveis. Ele oferece:</p>
 
-      <div style="margin: 20px 0; padding: 20px; background: var(--menta); border-radius: 12px; line-height: 1.8;">
+      <div style="margin: 25px 0; padding: 20px; background: var(--menta); border-radius: 14px; line-height: 1.8;">
         <p>🍦 <strong>Receitas simples, práticas e testadas para qualquer nível.</strong></p>
         <p>👨‍👩‍👧‍👦 <strong>Inspiração para criar momentos especiais em família.</strong></p>
         <p>⏱️ <strong>Preparo rápido com poucos ingredientes.</strong></p>
         <p>❄️ <strong>Funciona com ou sem sorveteira.</strong></p>
       </div>
 
-      <p>Se você chegou até aqui, é porque também valoriza esses momentos.</p>
+      <p style="line-height: 1.6;">Se você chegou até aqui, é porque também valoriza esses momentos. E acredite: não é preciso ser chef para encantar sua família com sabores incríveis — só é preciso um pouco de vontade… e as receitas certas.</p>
 
-      <p>E acredite: não é preciso ser chef para encantar sua família com sabores incríveis — só é preciso um pouco de vontade… e as receitas certas.</p>
-
-      <p style="text-align: center; font-size: 1.1rem; margin-top: 25px;">
+      <p style="text-align: center; font-size: 1.2rem; margin-top: 30px;">
         💛 <strong>Vamos dar o primeiro passo juntos?</strong>
       </p>
-  <p style="font-size: 0.8rem; color: red; font-weight: bold; text-align: center;">
-    🎉 Por que você tem esse desejo, assim como o meu, também merece um desconto exclusivo! Aproveite 😍
-  </p>
+
+      <p style="font-size: 0.85rem; color: #cc0000; font-weight: bold; text-align: center; margin-top: 10px;">
+        🎉 Porque esse desejo é especial, você merece um desconto exclusivo. Aproveite agora! 😍
+      </p>
+
+      <div style="text-align: center; margin-top: 20px;">
+        <a class="checkout-button" href="https://seulinkdecheckout.com" target="_blank">
+          👉 Garantir meu eBook com desconto agora!
+        </a>
+      </div>
     </div>
   </div>
-
-
-  <div style="text-align: center; margin-top: 10px;">
-    <a class="checkout-button" href="https://seulinkdecheckout.com" target="_blank">
-      👉 Garantir meu eBook com desconto agora!
-    </a>
-  </div>
 </div>
-
 <!-- Biblioteca de Confete -->
 <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 
