--- a/index.html
+++ b/index.html
@@ -129,6 +129,25 @@
       }
     }
   </style>
+  <!-- Meta Pixel Code -->
+<script>
+  !function(f,b,e,v,n,t,s)
+  {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+  n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+  if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+  n.queue=[];t=b.createElement(e);t.async=!0;
+  t.src=v;s=b.getElementsByTagName(e)[0];
+  s.parentNode.insertBefore(t,s)}(window, document,'script',
+  'https://connect.facebook.net/en_US/fbevents.js');
+  fbq('init', '1124624993037311'); 
+  fbq('track', 'PageView');
+</script>
+<noscript>
+  <img height="1" width="1" style="display:none"
+       src="https://www.facebook.com/tr?id=1124624993037311&ev=PageView&noscript=1"/>
+</noscript>
+<!-- End Meta Pixel Code -->
+
 </head>
 <body>
 
@@ -207,11 +226,17 @@
       </p>
 
       <p style="font-size: 0.85rem; color: #cc0000; font-weight: bold; text-align: center; margin-top: 10px;">
-        🎉 Porque esse desejo é especial, você merece um desconto exclusivo. Aproveite agora! 😍
+        🎉 O seu desejo é especial para mim, então quero te dar um presente! Use na finalização o cupom FAMILIA, aproveite agora! 😍
       </p>
 
+    <div style="text-align: right; margin-top: 10px;">
+  <i style="font-size: 0.85rem;">
+    - Atenciosamente, Camila!
+  </i>
+</div>
+
       <div style="text-align: center; margin-top: 20px;">
-        <a class="checkout-button" href="https://seulinkdecheckout.com" target="_blank">
+        <a class="checkout-button" href="https://pay.kirvano.com/9aa58506-88d8-4680-93c5-42ddfb8b024f" target="_blank">
           👉 Garantir meu eBook com desconto agora!
         </a>
       </div>
