--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
       </p>
 
       <p style="font-size: 0.85rem; color: #cc0000; font-weight: bold; text-align: center; margin-top: 10px;">
-        🎉 O seu desejo é especial para mim, então quero te dar um presente! Use na finalização o cupom FAMILIA, aproveite agora! 😍
+        🎉 O seu desejo é especial para mim, então quero te dar um presente! Aproveite agora! 😍
       </p>
 
     <div style="text-align: right; margin-top: 10px;">
