--- a/index.html
+++ b/index.html
@@ -284,7 +284,24 @@
       });
     }, 250);
   }
+
+  function getCookie(name) {
+    const value = "; " + document.cookie;
+    const parts = value.split("; " + name + "=");
+    if (parts.length === 2) return parts.pop().split(";").shift();
+  }
+
+  const checkoutButton = document.querySelector('.checkout-button');
+  if (checkoutButton) {
+    checkoutButton.addEventListener('click', function () {
+      const fbc = getCookie('_fbc');
+      fbq('track', 'InitiateCheckout', {
+        fbc: fbc || null
+      });
+    });
+  }
 </script>
 
 </body>
 </html>
+``` 
