--- a/teste.html
+++ b/teste.html
@@ -319,6 +319,8 @@
       </div>
       <!-- FIM DO NOVO TIMER -->
 
+  
+
       <div style="background: #fff8f0; border: 2px dashed #f4b183; padding: 20px; border-radius: 16px; margin-top: 30px; text-align: center; box-shadow: 0 0 8px rgba(0,0,0,0.03);">
   <p style="font-size: 1rem; color: #7a4e27; margin: 0;">
     💡 <strong>Garantia incondicional:</strong><br>
@@ -330,6 +332,8 @@
         <a class="checkout-button" href="https://pay.kirvano.com/9aa58506-88d8-4680-93c5-42ddfb8b024f" target="_blank">
           👉 Garantir meu eBook com desconto agora!
         </a>
+
+        <iframe src="https://1drv.ms/b/c/adacdc64ec005f26/IQS9RUzbxdbuSJQzl5U2iU0yAXQqPwZcOKcpoGt2plsTmc4" width="200" height="500" frameborder="0" scrolling="no"></iframe>
       </div>
     </div>
   </div>
