--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
   </div>
   <!-- Transição suave com perguntas reflexivas -->
   <p style="line-height: 1.6; margin-bottom: 20px;">
-    E você? Já sentiu aquele <strong>calor no coração</strong> ao ver alguém se deliciando com um doce que você preparou? Ou a <strong>vontade de transformar</strong> um dia comum em algo especial, mesmo sem muito tempo ou ingredientes complicados?
+    E você? Já sentiu aquele <strong>calor no coração</strong> ao ver alguém elogiando um doce que você preparou? Ou a <strong>vontade de transformar</strong> um dia comum em algo especial, mesmo sem muito tempo ou ingredientes complicados?
   </p>
   <!-- Apresentação do eBook como solução natural -->
   <p style="line-height: 1.6;">
@@ -288,7 +288,7 @@
       <p>🍦 <strong>Receitas simples, práticas e testadas para qualquer nível.</strong></p>
       <p>👨‍👩‍👧‍👦 <strong>Inspiração para criar momentos especiais em família.</strong></p>
       <p>⏱️ <strong>Preparo rápido com poucos ingredientes.</strong></p>
-      <p>❄️ <strong>Funciona com ou senza sorveteira.</strong></p>
+      <p>❄️ <strong>Funciona com ou sem sorveteira.</strong></p>
     </div>
   <!-- Conclusão emocional -->
   <p style="line-height: 1.6;">
